# extension-downloader

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  codecov.yml  default.nix  flake.nix  go.mod  go.sum  main.go  main_test.go  pkg.nix  renovate.json5
.github/workflows/: ci.yml  release.yml  update-flake-lock.yml
example/: config.toml
internal/chromium/: download.go  download_test.go  install.go  install_test.go
internal/config/: config.go  config_test.go
internal/firefox/: download.go  download_test.go  install.go  install_test.go
internal/manifest/: reader.go  reader_test.go
internal/netutil/: download.go  download_test.go
internal/pathutil/: expand.go  expand_test.go
src/: chromium.rs  config.rs  crx3.rs  firefox.rs  main.rs  manifest.rs
src/chromium/: crx3.rs  mod.rs  unix.rs  windows.rs
tests/fixtures/: vimium-ff.body.json  vimium_ff-2.1.2.xpi
