[package]
name = "extension-downloader"
edition = "2021"
license = "Apache-2.0"
authors = ["Michael Adler <therisen06@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
dirs = "6.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
walkdir = "2"

[dev-dependencies]
mockito = "1.6.1"
temp-dir = "0.1.14"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
