[package]
name = "extension-downloader"
edition = "2021"
license = "Apache-2.0"
authors = ["Michael Adler <therisen06@gmail.com>"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "charset", "http2", "system-proxy", "json"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1.0.0"
dirs = "6.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "7.0", default-features = false, features = ["deflate"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
walkdir = "2"

[dev-dependencies]
mockito = "=1.7.2"
temp-dir = "=0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
